debug_add_world_point position=(0,4,-2) duration=10
debug_add_world_point position=(0,0,0) duration=10
debug_add_world_billboard_text text="This is a string"
debug_add_screen_quad min=(0,0) max=(50,50)
debug_add_screen_quad min=(0,0) max=(50,50) duration=50
debug_add_world_point position=(0,0,0) duration=10
debug_add_screen_quad min=0,0 max=50,50 duration=50
help
debug_add_screen_point position=1000,500 duration=20
debug_add_world_billboard_text text=stringsarefun
debug_add_screen_point position=1000,500 duration=20
debug_add_screen_quad min=0,0 max=50,50 duration=50
debug_add_world_point position=(0,0,0) duration=10
help
debug_add_world_wire_sphere position=0,0,0 radius=3
hello
help
light_set_ambient_color color=1,0,0
light_set_ambient_color color=1,1,0
light_set_color color=0,0,1
light_set_color color=.5,.75,.2
light_set_color color=1,0,1
set_mouse_sensitivity multiplier=2
help
set_mouse_sensitivity multiplier=10
set_mouse_sensitivity multiplier=.5
light_set_color rgb=1,0,0
light_set_color color=1,0,0
light_set_color color=0,0,1
light_set_color color=0,1,1
light_set_color color=0,0,1
light_set_color color=1,0,0
light_set_color color=1,1,0
light_set_color color=1,0,1
warp
warp map=EmptyRoom
warp map=TestRoom
warp map=TestRoom pos=1,1
warp map=TestRoom pos=1,3
warp pos=1,3
warp yaw=90
warp yaw=180
warp pos=1,3
warp map=EmptyRoom
warp map=TestRoom pos=1,3
warp map=TestRoom pos=1,3 yaw=270
warp
warp=TwistyMaze
warp map=TwistyMaze
warp map=EmptyRoom
warp map=TestRoom
warp map=EmptyRoom
warp map=TwistyMaze
warp map=SpaceCastle
warp
warp map=UVTest
warp map=TwistyMaze
warp map=TwistyMaze 
warp
warp map=TwistyMaze pos=5,5
warp map=EmptyRoom pos=5,5
warp map=TestRoom pos=1,1
warp map=TestRoom pos=2,2
warp map=TestRoom pos=1,1
help
map
help
warp TestRoom
warp TwistyMaze
warp map=TwistyMaze
start_tcp_server
stop_tcp_server
start_tcp_server
connect
start_tcp_server
connect
start_tcp_server
help
connect
start_tcp_server
connect
start_tcp_server